# GPTZzzs

./: .gitignore  CNAME  CONTRIBUTING.md  README.md  SECURITY.md  index.html  main.py  pyproject.toml  script.js  style.css  text.txt
src/: setup.py
src/gptzzzs/: __init__.py  normal_change.py
tests/: command_line.py  jfk.py  text.txt
website/: index.html
